tests/security/taintedInputInCreatedArrayIsEchoed/output.txt
ERROR: TaintedData - input.hack:9:6 - Detected tainted HTML tags